--- a/style.css
+++ b/style.css
@@ -1,49 +1,53 @@
 
      /* /*  */
         body {
-            background-color: #8f05008e;
-            font: Georgia, Times New Roman, Times, serif
+            font-family: 'Arial', 'Helvetica Neue', 'sans-serif';
+            columns: #000000;
+            background:#777;
+            width: 960px;
+            font-size: 24px;
+            
+
+            
+        
+
+            
         }
       */ 
       h1 {
-      
       margin-bottom: 15px;
-      
       font-size: 35px;
-      
       color: rgb(52, 54, 202);
-      
       text-align: center;
-      
-      
-      background-color: rgb(15, 33, 82);
       }
       h2 {
-      
       margin-bottom: 15px;
-      
       font-size: 35px;
-   
       color: rgb(52, 54, 202);
-      
       text-align: center;
-   
-      text-decoration: underline;
-     
-      background-color: rgb(15, 33, 82);
-      }
-      h3 {
-      
-      margin-bottom: 15px;
-      
-      font-size: 35px;
-      
-      color: rgb(52, 54, 202);
-      
-      text-align: center;
-      
-      text-decoration: underline;
-      
       background-color: rgb(15, 33, 82);
       }
       
+      
+      h3 {      
+      margin-bottom: 15px;
+      font-size: 35px;
+      color: rgb(52, 54, 202);
+      text-align: center;
+      background-color: rgb(15, 33, 82);
+      }
+
+      h4 {
+          color:#777;
+          background: #777;
+          width: 960px;
+          font-size: 24px;
+
+
+      }
+       h5 {
+        color:#777;
+        background: #777;
+        width: 960px;
+        font-size: 24px;
+        }
