--- a/style.css
+++ b/style.css
@@ -1,12 +1,26 @@
 
      /* /*  */
-        body {
+     header {
+        font-family: 'Arial', 'Helvetica Neue', 'sans-serif';
+        margin-bottom: 15px;
+        background-color: navy;
+        font-size: 35px;
+        color: rgb(rgb(85, 1, 1));
+        text-align: left;
+     }  
+     
+     
+     
+     
+     
+     
+     body {
             font-family: 'Arial', 'Helvetica Neue', 'sans-serif';
-            columns: #000000;
+            color: #000000;
             background:#777;
             width: 960px;
             font-size: 24px;
-            
+
 
             
         
@@ -17,24 +31,24 @@
       h1 {
       margin-bottom: 15px;
       font-size: 35px;
-      color: rgb(52, 54, 202);
+      color: rgb(rgb(85, 1, 1));
       text-align: center;
       }
       h2 {
       margin-bottom: 15px;
       font-size: 35px;
-      color: rgb(52, 54, 202);
+      color: rgb(#000000);
       text-align: center;
-      background-color: rgb(15, 33, 82);
+      background-color: rgb(#777);
       }
       
       
       h3 {      
       margin-bottom: 15px;
       font-size: 35px;
-      color: rgb(52, 54, 202);
+      color: rgb(#000000);
       text-align: center;
-      background-color: rgb(15, 33, 82);
+      background-color: rgb(#777);
       }
 
       h4 {
