--- a/style.css
+++ b/style.css
@@ -34,6 +34,12 @@
     article {
         background: #ebebeb
     }
+
+
+
+    nav {
+        background:#ebebeb
+    }
       */ 
       h1 {
       margin-bottom: 15px;
